--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,11 +1,9 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px){
-    body{
-        background-image:linear-gradient(to top, #49a09d,#5f2c82 );
-    }
     section#login{
         width: 80vw;
+        height: 340px;
     }
 
     section#login > div#imagem{
@@ -20,17 +18,14 @@
     }
 
     div#formulario > p{
-        font-size: 1.0em;
+        font-size: 1em;
     }
 }
 
 @media screen and (min-width: 992px){
-    body{
-        background-image:linear-gradient(to top, #49a09d,#5f2c82 );
-    }
-
     section#login{
         width: 950px;
+        height: 430px;
     }
 
     section#login > div#imagem{
@@ -49,7 +44,7 @@
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1em;
     }
     
 }
